New endpoint and more validation
app.js:
- new route for endpoint

helper.js:
- new file to handle all helper functions
- helper function to check duplicate student_ids in file uploaded

student.js:
- added new function to handle the post request of adding a single student's basic and expand info
- added new error validation in uploadStudentXlsx for checking duplicated student_ids
