# Services/StudentService/src/app.js
@@ -45,6 +45,7 @@ app.post('/v0/student/basicInfo', auth.check, student.addBasicStudentInfo);
 app.post('/v0/student/expandInfo/:uuid', auth.check, student.addExpandStudentInfo);
 app.put('/v0/student/deactivate/:uuid', auth.check, student.deactivateStudent);
 app.post('/v0/student/upload', auth.check, student.uploadStudentXlsx);
+app.post('/v0/student/add', auth.check, student.addStudentInfo);
 
 app.use((err, req, res, next) => {
   const statusCode = err.status || 500;
